--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for marketplace-be on 2025-03-23T09:49:38Z
+# fly.toml app configuration file generated for pdf-rag-for-scholars on 2025-06-02T12:32:02Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'scholars-app'
+app = 'pdf-rag-for-scholars'
 primary_region = 'sin'
 
 [build]
