--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
-annotated-types==0.7.0
+annotated-types==0.7.0   
 anyio==4.9.0
 attrs==25.3.0
-certifi==2025.1.31
+certifi==2025.1.31       
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
-dataclasses-json==0.6.7
+dataclasses-json==0.6.7  
 distro==1.9.0
-fastapi==0.115.12
-frozenlist==1.5.0
+fastapi==0.115.12        
+frozenlist==1.5.0        
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
+Jinja2==3.1.6
 jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -27,6 +28,7 @@ langchain-core==0.3.51
 langchain-openai==0.3.12
 langchain-text-splitters==0.3.8
 langsmith==0.3.30
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.4.3
 mypy-extensions==1.0.0
@@ -43,6 +45,7 @@ pydantic_core==2.33.1
 pypdf==5.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
