--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
-chardet==5.2.0
+chardet==3.0.4
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
@@ -24,6 +24,7 @@ contourpy==1.3.2
 cryptography==45.0.4
 cycler==0.12.1
 dataclasses-json==0.6.7
+deep-translator==1.11.4
 Deprecated==1.2.18
 distro==1.9.0
 effdet==0.4.1
@@ -45,14 +46,18 @@ googleapis-common-protos==1.70.0
 greenlet==3.1.1
 grpcio==1.73.0
 grpcio-status==1.73.0
-h11==0.14.0
+h11==0.16.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
 html5lib==1.1
-httpcore==1.0.8
+httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.33.0
 humanfriendly==10.0
-idna==3.10
+hyperframe==5.2.0
+idna==2.10
 Jinja2==3.1.6
 jiter==0.9.0
 joblib==1.5.1
@@ -64,6 +69,7 @@ kiwisolver==1.4.8
 langchain==0.3.23
 langchain-community==0.3.21
 langchain-core==0.3.51
+langchain-experimental==0.3.4
 langchain-openai==0.3.12
 langchain-text-splitters==0.3.8
 langchain-unstructured==0.1.6
@@ -129,6 +135,7 @@ referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rfc3986==1.5.0
 rpds-py==0.25.1
 rsa==4.9.1
 safetensors==0.5.3
