--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 accelerate==1.8.0
-aiofiles==24.1.0
+aiofiles==24.1.0       
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
-aiosignal==1.3.2
+aiohttp==3.11.16       
+aiosignal==1.3.2       
 altair==5.5.0
-annotated-types==0.7.0
+annotated-types==0.7.0 
 antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 async-timeout==4.0.3
@@ -27,6 +27,7 @@ dataclasses-json==0.6.7
 deep-translator==1.11.4
 Deprecated==1.2.18
 distro==1.9.0
+dnspython==2.7.0
 effdet==0.4.1
 emoji==2.14.1
 exceptiongroup==1.3.0
@@ -116,6 +117,7 @@ pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
 pydeck==0.9.1
+pymongo==4.14.1
 PyMuPDF==1.26.1
 pyparsing==3.2.3
 pypdf==5.5.0
